adicao emergencia em grupos
